--- a/style.css
+++ b/style.css
@@ -54,3 +54,20 @@ form input.equal{
 form input.operator{
     color: #33ffd8;
 }
+/* ✅ Add media query only for narrow screens like Galaxy S8+ and Fold 5 */
+@media screen and (max-width: 400px) {
+    .calculator form input {
+        width: 50px;
+        height: 50px;
+        margin: 8px;
+        font-size: 18px;
+    }
+
+    form .display input {
+        font-size: 32px;
+    }
+
+    form input.equal {
+        width: 115px;
+    }
+}
